--- a/.github/ISSUE_TEMPLATE/1_documentation-issue.yml
+++ b/.github/ISSUE_TEMPLATE/1_documentation-issue.yml
@@ -1,6 +1,6 @@
 name: 📚 文档 Documentation Issue
 description: 反馈一个官网文档错误。 Report an issue related to https://www.paddlepaddle.org.cn/.
-labels: [type/docs, status/new-issue]
+labels: []
 
 body:
 - type: markdown
